--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-image-gallery": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.42",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
