--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "g": "^2.0.1",
     "next": "14.0.1",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0"
